[package]
name = "bootloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
dialoguer = "0.8.0"
winreg = { version = "0.9", features = ["transactions"] }
system_shutdown = "3.0.0"

[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = [
    'errhandlingapi',
    'processthreadsapi',
    'reason',
    'securitybaseapi',
    'winbase',
    'winerror',
    'winnt',
    'winuser',
]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"
